--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,30 @@
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
-
-<button type="button" class="btn btn-link">Link</button>
+<div class="container text-center">
+  <h4>Liste des apprenants</h4>
+  <table class="table table-striped">
+    <thead>
+  <tr>
+    <th>CIN</th>
+    <th>Prénom</th>
+    <th>Nom</th>
+    <th>DateNaissance</th>
+    <th>civilite</th>
+    <th>Adresse</th>
+    <th>Email</th>
+  </tr>
+</thead>
+<tbody>
+  <tr *ngFor="let mydata of data[0]">
+    <td>{{mydata.cinApprenant}}</td>
+    <td>{{mydata.prenom}}</td>
+    <td>{{mydata.nom}}</td>
+    <td>{{mydata.dateNaissance}}</td>
+    <td>{{mydata.civilite}}</td>
+    <td>{{mydata.adresses}}</td>
+    <td>{{mydata.adressMail}}</td>
+  </tr>
+  <tbody>
+    </table>
+</div>
 
 
 
