--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,4 @@
-<div class="container text-center">
-  <h4>Liste des apprenants</h4>
-  <table class="table table-striped">
-    <thead>
-  <tr>
-    <th>CIN</th>
-    <th>Prénom</th>
-    <th>Nom</th>
-    <th>DateNaissance</th>
-    <th>civilite</th>
-    <th>Adresse</th>
-    <th>Email</th>
-  </tr>
-</thead>
-<tbody>
-  <tr *ngFor="let mydata of data[0]">
-    <td>{{mydata.cinApprenant}}</td>
-    <td>{{mydata.prenom}}</td>
-    <td>{{mydata.nom}}</td>
-    <td>{{mydata.dateNaissance}}</td>
-    <td>{{mydata.civilite}}</td>
-    <td>{{mydata.adresses}}</td>
-    <td>{{mydata.adressMail}}</td>
-  </tr>
-  <tbody>
-    </table>
+<app-header></app-header>
+<div class="container">
+  <router-outlet></router-outlet>
 </div>
-
-
-
-<router-outlet></router-outlet>
