--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,25 +1,32 @@
-<div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
-      <h2>Créer un compte</h2>
-      <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-          <label for="email">Adresse mail</label>
-          <input type="text"
-                 id="email"
-                 class="form-control"
-                 formControlName="email">
+  <div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4" style="margin-top: 55px;">
+      <div class="card">
+        <div class="card-header" style="font-weight: bold;text-align: center;">
+          Sign In
         </div>
-        <div class="form-group">
-          <label for="password">Mot de passe</label>
-          <input type="password"
-                 id="password"
-                 class="form-control"
-                 formControlName="password">
+        <div class="card-body">
+          <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+              <label for="email" style="font-weight: bold;">Email</label>
+              <input type="text"
+                     id="email"
+                     class="form-control widhtinput"
+                     formControlName="email">
+            </div>
+            <div class="form-group">
+              <label for="password" style="font-weight: bold;">Password</label>
+              <input type="password"
+                     id="password"
+                     class="form-control widhtinput"
+                     formControlName="password">
+            </div>
+            <button class="btn btn-primary"
+                    type="submit"
+                    [disabled]="signinForm.invalid">Log in</button>
+          </form>
         </div>
-        <button class="btn btn-primary"
-                type="submit"
-                [disabled]="signinForm.invalid">Connexion</button>
-      </form>
-      <p class="text-danger">{{ errorMessage }}</p>
+      </div>
     </div>
+    <div class="col-md-4"></div>
   </div>
