--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,20 +1,14 @@
 .stylesign{
-    color: #fb44be;
-    font-weight: bold;
-}
-.stylesign:hover{
-    color: black;
-    background-color: white;
-}
-.stylesign:visited{
-    background-color: white;
+    color: white;
+    padding: 10px;
+    text-decoration: none;
 }
 
 .stylesignout{
     color: white;
     cursor: pointer;
 }
-.stylesignout:hover{
-    color: black;
-    background-color: white;
+
+.coloricon{
+    color: white;
 }
