--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,32 +1,24 @@
-  <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4" style="margin-top: 55px;">
-      <div class="card">
-        <div class="card-header" style="font-weight: bold;text-align: center;">
-          Sign In
-        </div>
-        <div class="card-body">
-          <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
-            <div class="form-group">
-              <label for="email" style="font-weight: bold;">Email</label>
-              <input type="text"
-                     id="email"
-                     class="form-control widhtinput"
-                     formControlName="email">
-            </div>
-            <div class="form-group">
-              <label for="password" style="font-weight: bold;">Password</label>
-              <input type="password"
-                     id="password"
-                     class="form-control widhtinput"
-                     formControlName="password">
-            </div>
-            <button class="btn btn-primary"
-                    type="submit"
-                    [disabled]="signinForm.invalid">Log in</button>
-          </form>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-4"></div>
-  </div>
+<div class="backgroundsignin">
+  <h2 class="posTitleForm">Sign In</h2>
+  <div class="posForm">
+       <form [formGroup]="signinForm" (ngSubmit)="onSubmit()">
+         <div class="form-group">
+           <label for="email" style="font-weight: bold;">Email</label>
+           <input type="text"
+                  id="email"
+                  class="form-control widhtinput"
+                  formControlName="email">
+         </div>
+         <div class="form-group">
+           <label for="password" style="font-weight: bold;">Password</label>
+           <input type="password"
+                  id="password"
+                  class="form-control widhtinput"
+                  formControlName="password">
+         </div>
+         <button class="btn btn-primary"
+                 type="submit"
+                 [disabled]="signinForm.invalid">Log in</button>
+       </form>
+   </div>
+</div>
