--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,24 +1,24 @@
-<div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
-      <h2>Créer un compte</h2>
+<div class="backgroundsignin">
+  <h2 class="posTitleForm">Register</h2>
+    <div class="posForm">
       <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
-          <label for="email">Adresse mail</label>
+          <label for="email" style="font-weight: bold;">Email</label>
           <input type="text"
                  id="email"
-                 class="form-control"
+                 class="form-control widhtinput"
                  formControlName="email">
         </div>
         <div class="form-group">
-          <label for="password">Mot de passe</label>
+          <label for="password" style="font-weight: bold;">Password</label>
           <input type="password"
                  id="password"
-                 class="form-control"
+                 class="form-control widhtinput"
                  formControlName="password">
         </div>
         <button class="btn btn-primary"
                 type="submit"
-                [disabled]="signupForm.invalid">Créer mon compte</button>
+                [disabled]="signupForm.invalid">Create account</button>
       </form>
       <p class="text-danger">{{ errorMessage }}</p>
     </div>
